# vibelint

./: .gitignore  PRODUCT_CONTEXT.md  README.md  pyproject.toml
src/vibelint/: __init__.py  __main__.py  cli.py  config.py  engine.py  models.py
src/vibelint/formatters/: __init__.py  json_fmt.py  terminal.py
src/vibelint/parsers/: __init__.py  typescript.py
src/vibelint/rules/: __init__.py  base.py  registry.py
src/vibelint/rules/logic/: __init__.py  logic001_async_in_array_method.py  logic002_catch_all_error.py  logic004_missing_null_check.py
src/vibelint/rules/qual/: __init__.py  qual001_any_type.py  qual003_unused_imports.py
src/vibelint/rules/sec/: __init__.py  sec001_hardcoded_secrets.py  sec002_xss_inner_html.py  sec004_cors_wildcard.py
tests/fixtures/: bad_vibes.ts  clean_code.ts
